--- a/@docs-md/document/2_environmentSetup/3.md
+++ b/@docs-md/document/2_environmentSetup/3.md
@@ -1,18 +1,18 @@
-# Integration with an Android Fragment
+# Android Fragment와 통합
 
-The guide for [Integration with Existing Apps](https://reactnative.dev/docs/integration-with-existing-apps) details how to integrate a full-screen React Native app into an existing Android app as an Activity. To use React Native components within Fragments in an existing app requires some additional setup. The benefit of this is that it allows for a native app to integrate React Native components alongside native fragments in an Activity.
+[기존 앱과 통합하기](https://reactnative.dev/docs/integration-with-existing-apps) 가이드에서는 전체 화면 React Native 앱을 기존 Android 앱에 활동으로 통합하는 방법을 자세히 설명합니다. 기존 앱의 Fragments 내에서 React Native 구성 요소를 사용하려면 몇 가지 추가 설정이 필요합니다. 이것의 이점은 네이티브 앱이 활동의 네이티브 프래그먼트와 함께 React 네이티브 구성 요소를 통합 할 수 있다는 것입니다.
 
-### 1. Add React Native to your app[#](https://reactnative.dev/docs/integration-with-android-fragment#1-add-react-native-to-your-app)
+### 1. 앱에 React Native 추가[#](https://reactnative.dev/docs/integration-with-android-fragment#1-add-react-native-to-your-app)
 
-Follow the guide for [Integration with Existing Apps](https://reactnative.dev/docs/integration-with-existing-apps) until the Code integration section. Continue to follow Step 1. Create an `index.android.js` file and Step 2. Add your React Native code from this section.
+코드 통합 섹션까지 [기존 앱과 통합하기](https://reactnative.dev/docs/integration-with-existing-apps) 가이드를 따르세요. 계속해서 1 단계를 따르십시오. `index.android.js` 파일을 만들고 2 단계를 따르십시오. 이 섹션에서 React Native 코드를 추가하십시오.
 
-### 2. Integrating your App with a React Native Fragment[#](https://reactnative.dev/docs/integration-with-android-fragment#2-integrating-your-app-with-a-react-native-fragment)
+### 2. 앱을 React Native Fragment와 통합[#](https://reactnative.dev/docs/integration-with-android-fragment#2-integrating-your-app-with-a-react-native-fragment)
 
-You can render your React Native component into a Fragment instead of a full screen React Native Activity. The component may be termed a "screen" or "fragment" and it will function in the same manner as an Android fragment, likely containing child components. These components can be placed in a `/fragments` folder and the child components used to compose the fragment can be placed in a `/components` folder.
+React Native 구성 요소를 전체 화면 React Native Activity 대신 Fragment로 렌더링 할 수 있습니다. 구성 요소는 "screen" 또는 "fragment"이라고 할 수 있으며 하위 구성 요소를 포함하는 Android fragment와 동일한 방식으로 작동합니다. 이러한 구성 요소는`/fragments` 폴더에 배치 할 수 있으며 프래그먼트를 구성하는 데 사용되는 하위 구성 요소는`/components` 폴더에 배치 할 수 있습니다.
 
-You will need to implement the ReactApplication interface in your main Application Java class. If you have created a new project from Android Studio with a default activity, you will need to create a new class e.g. `MyReactApplication.java`. If it is an existing class you can find this main class in your `AndroidManifest.xml` file. Under the `<application />` tag you should see a property `android:name` e.g. `android:name=".MyReactApplication"`. This value is the class you want to implement and provide the required methods to.
+메인 Application Java 클래스에서 ReactApplication 인터페이스를 구현해야합니다. 기본 활동으로 Android Studio에서 새 프로젝트를 만든 경우 새 클래스를 만들어야합니다. (예:  `MyReactApplication.java`) 기존 클래스 인 경우 `AndroidManifest.xml` 파일에서 이 기본 클래스를 찾을 수 있습니다. `<application />` 태그 아래에 `android:name` 속성이 표시되어야합니다. (예: `android:name=".MyReactApplication"`) 이 값은 구현하고자 하며, 필요한 메서드를 제공하려는 클래스입니다.
 
-Ensure your main Application Java class implements ReactApplication:
+기본 Application Java 클래스가 ReactApplication을 구현하는지 확인하십시오:
 
 ```java
 public class MyReactApplication extends Application implements ReactApplication {...}
@@ -48,7 +48,7 @@ public class MyReactApplication extends Application implements ReactApplication 
 }
 ```
 
-If you are using Android Studio, use Alt + Enter to add all missing imports in your class. Alternatively these are the required imports to include manually:
+Android Studio를 사용하는 경우 Alt + Enter를 사용하여 누락 된 모든 import를 클래스에 추가합니다. 또는 다음은 수동으로 포함하는 데 필요한 import입니다.
 
 ```java
 import android.app.Application;
@@ -62,15 +62,15 @@ import com.facebook.soloader.SoLoader;
 import java.util.List;
 ```
 
-Perform a "Sync Project files with Gradle" operation.
+"Sync Project files with Gradle" 작업을 수행합니다.
 
-### Step 3. Add a FrameLayout for the React Native Fragment[#](https://reactnative.dev/docs/integration-with-android-fragment#step-3-add-a-framelayout-for-the-react-native-fragment)
+### Step 3. React Native Fragment에 대한 FrameLayout 추가t[#](https://reactnative.dev/docs/integration-with-android-fragment#step-3-add-a-framelayout-for-the-react-native-fragment)
 
-You will now add your React Native Fragment to an Activity. For a new project this Activity will be `MainActivity` but it could be any Activity and more fragments can be added to additional Activities as you integrate more React Native components into your app.
+이제 React Native Fragment를 액티비티에 추가합니다. 새 프로젝트의 경우 이 액티비티는 `MainActivity`가 되지만 어떤 액티비티든 될 수 있으며 더 많은 React Native 구성 요소를 앱에 통합 할 때 추가 액티비티에 더 많은 프래그먼트를 추가 할 수 있습니다.
 
-First add the React Native Fragment to your Activity's layout. For example `main_activity.xml` in the `res/layouts` folder.
+먼저 액티비티의 레이아웃에 React Native Fragment를 추가합니다. 예를 들어`res/layouts` 폴더의 `main_activity.xml`입니다.
 
-Add a `<FrameLayout>` with an id, width and height. This is the layout you will find and render your React Native Fragment into.
+ID, 너비 및 높이가있는`<FrameLayout>`을 추가합니다. 이것은 React Native Fragment를 찾고 렌더링 할 레이아웃입니다.
 
 ```jsx
 <FrameLayout
@@ -79,11 +79,11 @@ Add a `<FrameLayout>` with an id, width and height. This is the layout you will 
     android:layout_height="match_parent" />
 ```
 
-### Step 4. Add a React Native Fragment to the FrameLayout[#](https://reactnative.dev/docs/integration-with-android-fragment#step-4-add-a-react-native-fragment-to-the-framelayout)
+### Step 4. FrameLayout에 React Native Fragment 추가[#](https://reactnative.dev/docs/integration-with-android-fragment#step-4-add-a-react-native-fragment-to-the-framelayout)
 
-To add your React Native Fragment to your layout you need to have an Activity. As mentioned in a new project this will be `MainActivity`. In this Activity add a button and an event listener. On button click you will render your React Native Fragment.
+React Native Fragment를 레이아웃에 추가하려면 Activity가 있어야합니다. 새 프로젝트에서 언급했듯이 이것은 `MainActivity`입니다. 이 활동에서 버튼과 이벤트 리스너를 추가합니다. 버튼을 클릭하면 React Native Fragment를 렌더링합니다.
 
-Modify your Activity layout to add the button:
+버튼을 추가하려면 액티비티 레이아웃을 수정하세요:
 
 ```jsx
 <Button
@@ -94,15 +94,15 @@ Modify your Activity layout to add the button:
     android:text="Show react fragment" />
 ```
 
-Now in your Activity class e.g. `MainActivity.java` you need to add an OnClickListener for the button, instantiate your ReactFragment and add it to the frame layout.
+이제 Activity 클래스에서 예를 들어 `MainActivity.java`는 버튼에 OnClickListener를 추가하고 ReactFragment를 인스턴스화 한 다음 프레임 레이아웃에 추가해야합니다.
 
-Add the button field to the top of your Activity:
+활동 상단에 버튼 필드를 추가합니다:
 
 ```java
 private Button mButton;
 ```
 
-Update your Activity's onCreate method as follows:
+다음과 같이 활동의 onCreate 메소드를 업데이트하십시오:
 
 ```java
 @Override
@@ -128,11 +128,12 @@ protected void onCreate(Bundle savedInstanceState) {
 }
 ```
 
-In the code above `Fragment reactNativeFragment = new ReactFragment.Builder()` creates the ReactFragment and `getSupportFragmentManager().beginTransaction().add()` adds the Fragment to the Frame Layout.
+위의 코드에서 `Fragment reactNativeFragment = new ReactFragment.Builder()`는 ReactFragment를 생성하고 `etSupportFragmentManager().beginTransaction().add()`는 Fragment를 프레임 레이아웃에 추가합니다.
 
-If you are using a starter kit for React Native, replace the "HelloWorld" string with the one in your `index.js` or `index.android.js` file (it’s the first argument to the AppRegistry.registerComponent() method).
+React Native 용 스타터 키트를 사용하는 경우 "HelloWorld" 문자열을 `index.js`또는 `index.android.js`파일의 문자열로 바꿉니다. (AppRegistry.registerComponent() 메서드의 첫 번째 인자입니다).
 
-Add the `getLaunchOptions` method which will allow you to pass props through to your component. This is optional and you can remove `setLaunchOptions` if you don't need to pass any props.
+컴포넌트에 props을 전달할 수 있는 `getLaunchOptions` 메소드를 추가합니다. 이것은 선택 사항이며 props을 전달할 필요가 없으면 `setLaunchOptions`를 제거 할 수 있습니다.
+
 
 ```java
 private Bundle getLaunchOptions(String message) {
@@ -142,7 +143,7 @@ private Bundle getLaunchOptions(String message) {
 }
 ```
 
-Add all missing imports in your Activity class. Be careful to use your package’s BuildConfig and not the one from the facebook package! Alternatively these are the required imports to include manually:
+활동 클래스에 누락된 imports를 모두 추가하십시오. 페이스북 패키지가 아닌 패키지의 BuildConfig를 사용하도록주의하세요! 또는 다음은 수동으로 포함하는 데 필요한 imports입니다:
 
 ```java
 import android.app.Application;
@@ -154,12 +155,14 @@ import com.facebook.react.shell.MainReactPackage;
 import com.facebook.soloader.SoLoader;
 ```
 
-Perform a "Sync Project files with Gradle" operation.
+"Sync Project files with Gradle"작업을 수행합니다.
 
-### Step 5. Test your integration[#](https://reactnative.dev/docs/integration-with-android-fragment#step-5-test-your-integration)
 
-Make sure you run `yarn` to install your react-native dependencies and run `yarn native` to start the metro bundler. Run your android app in Android Studio and it should load the JavaScript code from the development server and display it in your React Native Fragment in the Activity.
+### Step 5. 통합 테스트[#](https://reactnative.dev/docs/integration-with-android-fragment#step-5-test-your-integration)
 
-### Step 6. Additional setup - Native modules[#](https://reactnative.dev/docs/integration-with-android-fragment#step-6-additional-setup---native-modules)
+react-native dependencies을 설치하려면`yarn`을 실행하고 메트로 번들러를 시작하려면 `yarn native`를 실행해야합니다. Android Studio에서 Android 앱을 실행하면 개발 서버에서 JavaScript 코드를 로드하고 Activity의 React Native Fragment에 표시해야합니다.
 
-You may need to call out to existing Java code from your react component. Native modules allow you to call out to native code and run methods in your native app. Follow the setup here [native-modules-android](
+
+### Step 6. 추가 설정-기본 모듈[#](https://reactnative.dev/docs/integration-with-android-fragment#step-6-additional-setup---native-modules)
+
+react component에서 기존 Java 코드를 호출해야 할 수도 있습니다. 네이티브 모듈을 사용하면 네이티브 코드를 호출하고 네이티브 앱에서 메서드를 실행할 수 있습니다. 여 곳의 설정을 따르십시오. [native-modules-android](https://reactnative.dev/docs/native-modules-android)
